--- a/index.html
+++ b/index.html
@@ -32,30 +32,30 @@
 
     <section id="projects" class="projects-section">
       <h2 class="projects-section-header">These are some of my projects</h2>
-      <div class="projects-grid">
+      <div class="projects-flex">
         <a href="#" target="_blank" class="project project-tile">
-          <img class="project-image" src="#" alt="project">
+          <img class="project-image" src="./src/projects/tribute.jpg" alt="project">
           <p class="project-title">Tribute Page</p>
         </a>
         <a href="#" target="_blank" class="project project-tile">
-          <img class="project-image" src="#" alt="project">
-          <p class="project-title">Tribute Page</p>
+          <img class="project-image" src="./src/projects/random-quote-machine.png" alt="project">
+          <p class="project-title">Random Quote Machine</p>
         </a>
         <a href="#" target="_blank" class="project project-tile">
-          <img class="project-image" src="#" alt="project">
-          <p class="project-title">Tribute Page</p>
+          <img class="project-image" src="./src/projects/calc.png" alt="project">
+          <p class="project-title">JavaScript Calculator</p>
         </a>
         <a href="#" target="_blank" class="project project-tile">
-          <img class="project-image" src="#" alt="project">
-          <p class="project-title">Tribute Page</p>
+          <img class="project-image" src="./src/projects/map.jpg" alt="project">
+          <p class="project-title">Map Data Across the Globe</p>
         </a>
         <a href="#" target="_blank" class="project project-tile">
-          <img class="project-image" src="#" alt="project">
-          <p class="project-title">Tribute Page</p>
+          <img class="project-image" src="./src/projects/wiki.png" alt="project">
+          <p class="project-title">Wikipedia Viewer</p>
         </a>
         <a href="#" target="_blank" class="project project-tile">
-          <img class="project-image" src="#" alt="project">
-          <p class="project-title">Tribute Page</p>
+          <img class="project-image" src="./src/projects/tic-tac-toe.png" alt="project">
+          <p class="project-title">Tic Tac Toe Game</p>
         </a>
       </div>
     </section>
